# SiFli-SDK

./: .gitignore  .version  build_config.yaml  build_config_gcc.yaml  export.ps1  export.sh  install.ps1  install.sh  set_env.bat
customer/boards/: Kconfig_drv
customer/peripherals/: SConscript
drivers/Include/: bf0_hal_lcdc.h  bf0_hal_mpi.h  bf0_hal_qspi.h  flash_table.h
drivers/hal/: bf0_hal_aes.c  bf0_hal_lcdc.c  bf0_hal_mpi_ex.c  bf0_hal_pcd.c  bf0_hal_qspi_ex.c  flash_table.c  nand_table.c
drivers/ll/: SConscript
example/mp3online/: README.md
example/vglite/: README.md  README_EN.md
middleware/audio/: Kconfig
middleware/button/: button.c
middleware/coredump/: coredump.c  coredump.h  coredump_backend_partition.c
middleware/dfu/: dfu_ctrl.c  dfu_flash.c
middleware/dfu_pan/: bt_pan_ota.c  bt_pan_ota.h  dfu_pan_flash.c  dfu_pan_flash.h  dfu_pan_macro.h  dfu_pan_ui.c  dfu_pan_ui.h
middleware/include/: button.h
middleware/lvgl/: SConscript  app_mem.c  app_mem.h  littlevgl2rtt.c  lv_conf_sifli.h
middleware/partition_table/: SConscript
middleware/system/: bf0_common.c
tests/sdk_env/: test_python_deps_ext.py  test_sdk_env.py  test_sdk_py_environment.py  test_sifli_sdk_tools_cli.py
tools/: sdk.py  sdk_env.py  sifli_sdk_tools.py  tools.json  tools_schema.json
tools/AssertDump/: AssertDump.ini  readme.txt  sf32lb52x_psram_16MB.jlink  sf32lb52x_psram_2MB.jlink  sf32lb52x_psram_4MB.jlink  sf32lb52x_psram_8MB.jlink  sf32lb52x_psramless.jlink  sf32lb55x_psram_16MB.jlink  sf32lb55x_psramless.jlink  (+10 more)
tools/locks/default/: lock.json  pyproject.toml
(+431 files in other folders)
